reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_with_concrete_flatten_not_marked-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: <\nTestGenericWithConcreteFlatten<TestFlattenIfElse> > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Type variables for generic types


T = TypeVar("T")


class ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTes_56981a18(
    BaseModel
):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    other: reflectapi_demo.tests.serde.TestFlattenIfElse
    inner_a: int
    inner_b: str


class ReflectapiDemoTestsSerdeTestFlattenIfElse(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    code: int


class ReflectapiDemoTestsSerdeTestFlattenInner(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    inner_a: int
    inner_b: str


class ReflectapiDemoTestsSerdeTestGenericWithConcreteFlatten(BaseModel, Generic[T]):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    other: T
    inner_a: int
    inner_b: str


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TestFlattenIfElse = ReflectapiDemoTestsSerdeTestFlattenIfElse
            TestFlattenInner = ReflectapiDemoTestsSerdeTestFlattenInner
            TestGenericWithConcreteFlatten = (
                ReflectapiDemoTestsSerdeTestGenericWithConcreteFlatten
            )


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse
        ] = None,
    ) -> ApiResponse[
        ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse]: Response containing ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse
        ] = None,
    ) -> ApiResponse[
        ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse]: Response containing ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTestsSerdeTestFlattenIfElse,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeTestGenericWithConcreteFlattenReflectapiDemoTes_56981a18,
    ReflectapiDemoTestsSerdeTestFlattenIfElse,
    ReflectapiDemoTestsSerdeTestFlattenInner,
    ReflectapiDemoTestsSerdeTestGenericWithConcreteFlatten,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
