reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__kebab_case-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < Test > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.Test,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.Test, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface Test {
        "field-name": number /* u8 */;
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.Test,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.Test,
        {},
        reflectapi_demo.tests.serde.Test,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
